fix overflow, add styles

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #main-container {
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0 auto 3em;
     padding: 1em;
 }
 
@@ -21,6 +21,7 @@ p, a {
 a {
     color: #d142cc;
 }
+
 
 /********* form reset *********/
 #fs-frm input,
@@ -61,6 +62,7 @@ a {
   background-color: rgba(255,255,255,0.9);
   padding: .75em 1rem;
   margin-bottom: 1.5rem;
+  box-sizing: border-box; /* I added this line to fix an overflow issue */
 }
 #fs-frm input:focus,
 #fs-frm select:focus,
@@ -130,3 +132,20 @@ a {
   margin-right: 3%;
 }
 /********* end form reset *********/
+
+
+/********* customize form *********/
+#fs-frm [type="submit"] {
+    font-size: 22px;
+}
+
+#fs-frm label, #fs-frm legend, #fs-frm ::placeholder {
+    font-size: 16px;
+    color: #888;
+}
+
+#fs-frm input, #fs-frm select, #fs-frm textarea, #fs-frm #card-element {
+    margin-bottom: 1em;
+}
+/********* end customize form *********/
+
